Added musl x64 builds to CI
refs https://github.com/TryGhost/node-sqlite3/issues/1576

- this commit adds musl prebuilt binaries to CI via Alpine
- also updates the docs to reference the new targets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,11 @@ jobs:
         variant:
           - bullseye
           - alpine
+        include:
+          # musl x64 builds
+          - architecture: linux/amd64
+            variant: alpine
+            node: 16
     name: ${{ matrix.variant }} ${{ matrix.architecture }} - Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v3
