Added CI step to print out glibc compatibility
refs https://github.com/TryGhost/node-sqlite3/issues/1580
refs https://github.com/TryGhost/node-sqlite3/issues/1578

- it's difficult to know what version of glibc CI is building binaries
  compatible with, so this commit adds a step to print out the linked
  version after building

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,13 @@ jobs:
       - name: Build binaries
         run: yarn node-pre-gyp build
 
+      - name: Print glibc linking
+        if: contains(matrix.os, 'ubuntu')
+        run: |
+          ldd lib/binding/*/node_sqlite3.node
+          echo "---"
+          nm lib/binding/*/node_sqlite3.node | grep "GLIBC_" | c++filt || true
+
       - name: Run tests
         run: yarn test
 
