Switched to file allowlist for NPM publishing
- this commit switches the `.npmignore` file for an allowlist in
  `package.json`
- I've already had to fix this up before publishing, and it's a lot more
  maintainable to have a list of files to publish vs a list of files to
  exclude, and stops us accidentally publishing local files

--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
     "Mithgol",
     "Ben Noordhuis <ben@strongloop.com>"
   ],
+  "files": [
+    "binding.gyp",
+    "deps/",
+    "lib/*.js",
+    "src/"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/TryGhost/node-sqlite3.git"
