Replaced Makefile with NPM scripts
- these commands weren't documented anywhere and it's a little cleaner
  to put the commands in the scripts section
- I've only copied across the main ones for building in release/debug
  mode but we can always add more in the future

--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "node-gyp": "8.x"
   },
   "scripts": {
+    "build": "node-pre-gyp build",
+    "build:debug": "node-pre-gyp build --debug",
     "install": "node-pre-gyp install --fallback-to-build",
     "pretest": "node test/support/createdb.js",
     "test": "mocha -R spec --timeout 480000",
