Fixed GCC preinclude always present in build
fixes https://github.com/TryGhost/node-sqlite3/issues/1584

- I'd previously added the `gcc-preinclude.h` file into
  `deps/sqlite3.gyp`, which would include it for every build
- this was technically incorrect because we only want to use this in CI
  to build backwards compatible binaries
- I tried this before, but couldn't get the syntax right
- this commit switches to only including the preinclude in CI and
  removes it from every build, so FreeBSD etc can compile as per the
  issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,13 @@ jobs:
       - name: Install dependencies
         run: yarn install --ignore-scripts
 
+      - name: Add Linux env vars
+        if: contains(matrix.os, 'ubuntu')
+        run: |
+          echo "CFLAGS=${CFLAGS:-} -include ../src/gcc-preinclude.h" >> $GITHUB_ENV
+          echo "CXXFLAGS=${CXXFLAGS:-} -include ../src/gcc-preinclude.h" >> $GITHUB_ENV
+          echo "V=1" >> $GITHUB_ENV
+
       - name: Configure build
         run: yarn node-pre-gyp configure
 
