Inlined Renovate config into `package.json`
- we can include a section in `package.json`, and this saves polluting
  the repo root with extra files

--- a/package.json
+++ b/package.json
@@ -82,5 +82,10 @@
     "sqlite3",
     "database"
   ],
-  "main": "./lib/sqlite3"
+  "main": "./lib/sqlite3",
+  "renovate": {
+    "extends": [
+      "@tryghost:base"
+    ]
+  }
 }
