--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "5.0.4",
   "homepage": "https://github.com/TryGhost/node-sqlite3",
   "author": {
-    "name": "MapBox",
+    "name": "Mapbox",
     "url": "https://mapbox.com/"
   },
   "binary": {
