Restored compatibility for Alpine 3.15
fixes https://github.com/TryGhost/node-sqlite3/issues/1625

- Alpine 3.16 was released in May 2022 and 5.0.9 was the first release
  since it became the default for `node16-alpine`
- compiling on Alpine 3.16 broke compatiblity for Alpine 3.15
- given we should be able to just build with 3.15 and the binaries end
  up forward-compatible, this commit reverts back to that

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,11 +121,11 @@ jobs:
           - linux/arm64
         variant:
           - bullseye
-          - alpine
+          - alpine3.15
         include:
           # musl x64 builds
           - target: linux/amd64
-            variant: alpine
+            variant: alpine3.15
             node: 16
     name: ${{ matrix.variant }} (node=${{ matrix.node }}, target=${{ matrix.target }})
     steps:
