--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "tar": "^6.1.11"
   },
   "devDependencies": {
+    "@tybys/emnapi": "^0.27.0",
+    "@tybys/emnapi-runtime": "^0.27.0",
     "eslint": "6.8.0",
     "mocha": "7.2.0",
     "node-pre-gyp-github": "1.4.4"
