Fix ci test script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
       
       - name: Run tests (WebAssembly)
         if: matrix.target == 'wasm32'
-        run: yarn test --arch=wasm32
+        run: npx --arch=wasm32 yarn test
 
       - name: Package prebuilt binaries
         run: yarn node-pre-gyp package --target_arch=${{ env.TARGET }}
