--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,12 +111,17 @@ jobs:
         run: emmake yarn node-pre-gyp build --nodedir=./wasm --target_arch=${{ env.TARGET }}
 
       - name: Print binary info
-        if: contains(matrix.os, 'ubuntu')
+        if: contains(matrix.os, 'ubuntu') && matrix.target != 'wasm32'
         run: |
           ldd lib/binding/*/node_sqlite3.node
           echo "---"
           nm lib/binding/*/node_sqlite3.node | grep "GLIBC_" | c++filt || true
           echo "---"
+          file lib/binding/napi-v*/*
+      
+      - name: Print binary info (WebAssembly)
+        if: contains(matrix.os, 'ubuntu') && matrix.target == 'wasm32'
+        run: |
           file lib/binding/napi-v*/*
 
       - name: Run tests
