--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "eslint": "6.8.0",
-    "mocha": "7.2.0",
+    "mocha": "^10.2.0",
     "node-pre-gyp-github": "1.4.4"
   },
   "peerDependencies": {
