--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     ]
   },
   "contributors": [
+    "Daniel Lockyer <hi@daniellockyer.com>",
     "Konstantin Käfer <mail@kkaefer.com>",
     "Dane Springmeyer <dane@mapbox.com>",
     "Will White <will@mapbox.com>",
