--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
       - name: Install dependencies
         run: yarn install --ignore-scripts
 
+      - name: Check Node compatibility
+        run: node tools/semver-check.js
+
       - name: Add env vars
         shell: bash
         run: |
