Fixed uploading release assets on Windows
- I foolishly used a bash env var format but Windows uses Powershell
- simplest here is just to remove the env var and pass it in directly

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "install": "prebuild-install -r napi || node-gyp rebuild",
     "prebuild": "prebuild --runtime napi --all --verbose",
     "rebuild": "node-gyp rebuild",
-    "upload": "prebuild --verbose --prerelease --upload-all ${GITHUB_TOKEN}",
+    "upload": "prebuild --verbose --prerelease",
     "test": "node test/support/createdb.js && mocha -R spec --timeout 480000"
   },
   "license": "BSD-3-Clause",
