--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,10 +106,8 @@ jobs:
           retention-days: 7
 
       - name: Upload binaries to GitHub Release
-        run: yarn upload
+        run: yarn upload --upload-all ${{ github.token }}
         if: matrix.node == 18 && startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
 
   build-qemu:
     runs-on: ubuntu-latest
@@ -162,7 +160,5 @@ jobs:
           retention-days: 7
 
       - name: Upload binaries to GitHub Release
-        run: yarn install --ignore-scripts && yarn upload
+        run: yarn install --ignore-scripts && yarn upload --upload-all ${{ github.token }}
         if: matrix.node == 18 && startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
