--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
         os:
           - macos-latest
           - ubuntu-20.04
+          - ubuntu-24.04-arm
           - windows-latest
         host:
           - x64
