Switched to native M1 machines

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - macos-latest
+          - macos-15
           - ubuntu-20.04
           - windows-latest
         host:
@@ -33,7 +33,7 @@ jobs:
             node: 18
             host: x86
             target: x86
-          - os: macos-m1
+          - os: macos-15
             node: 18
             host: arm64
             target: arm64
@@ -46,11 +46,11 @@ jobs:
           architecture: ${{ matrix.host }}
 
       - name: Add yarn (self-hosted)
-        if: matrix.os == 'macos-m1'
+        if: matrix.os == 'macos-15'
         run: npm install -g yarn
 
       - name: Add setuptools for Python 3.12 (temp)
-        if: matrix.os != 'macos-m1'
+        if: matrix.os != 'macos-15'
         run: pip install setuptools
 
       - name: Add msbuild to PATH
