--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ local.env
 setup.sh
 /build-tmp-napi-v3
 /build-tmp-napi-v6
+/build-tmp-napi-v8
+/build-tmp-napi-v9
+/build-tmp-napi-v10
 *.tgz
 package-lock.json
 yarn.lock
