--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "sqlite3",
-  "description": "Asynchronous, non-blocking SQLite3 bindings",
-  "version": "5.1.7",
-  "homepage": "https://github.com/TryGhost/node-sqlite3",
+  "description": "Asynchronous, non-blocking SQLite3 bindings. Forked from AppThreat/node-sqlite3",
+  "version": "5.2.0",
+  "homepage": "https://github.com/AppThreat/node-sqlite3",
   "author": {
     "name": "Mapbox",
     "url": "https://mapbox.com/"
   },
   "binary": {
-    "napi_versions": [
-      3,
-      6
-    ]
+    "napi_versions": [8, 9, 10]
   },
   "contributors": [
     "Daniel Lockyer <hi@daniellockyer.com>",
@@ -41,21 +38,21 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/TryGhost/node-sqlite3.git"
+    "url": "https://github.com/AppThreat/node-sqlite3.git"
   },
   "dependencies": {
     "bindings": "^1.5.0",
-    "node-addon-api": "^7.0.0",
-    "prebuild-install": "^7.1.1",
-    "tar": "^6.1.11"
+    "node-addon-api": "^8.3.1",
+    "prebuild-install": "^7.1.3"
   },
   "devDependencies": {
-    "eslint": "8.56.0",
-    "mocha": "10.2.0",
-    "prebuild": "12.1.0"
+    "eslint": "9.27.0",
+    "mocha": "11.5.0",
+    "tar": "^7.4.3",
+    "prebuild": "13.0.1"
   },
   "peerDependencies": {
-    "node-gyp": "8.x"
+    "node-gyp": "11.x"
   },
   "peerDependenciesMeta": {
     "node-gyp": {
@@ -63,7 +60,10 @@
     }
   },
   "optionalDependencies": {
-    "node-gyp": "8.x"
+    "node-gyp": "11.x"
+  },
+  "engines": {
+    "node": ">=20"
   },
   "scripts": {
     "install": "prebuild-install -r napi || node-gyp rebuild",
